--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j3ltetw.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j3ltetw.dts
@@ -134,7 +134,8 @@
 		compatible = "samsung,s6e8aa5x01-ams497hy01";
 		reg = <0>;
 
-		power-supply = <&pm8916_l17>;
+		vdd3-supply = <&pm8916_l6>;
+		vci-supply = <&pm8916_l17>;
 
 		reset-gpios = <&msmgpio 25 GPIO_ACTIVE_LOW>;
 
