--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
@@ -133,9 +133,68 @@
 				       "0", "0", "-1";
 		};
 	};
+
+	reg_vdd_lcd_1p8: regulator-vdd-lcd-1p8 {
+		compatible = "regulator-fixed";
+		regulator-name = "vdd_lcd_1p8";
+		regulator-min-microvolt = <1800000>;
+		regulator-max-microvolt = <1800000>;
+		vin-supply = <&pm8916_s4>;
+
+		gpio = <&msmgpio 69 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&lcd_ldo_en_default>;
+	};
+
+	reg_vdd_lcd_3p0: regulator-vdd-lcd-3p0 {
+		compatible = "regulator-fixed";
+		regulator-name = "vdd_lcd_3p0";
+		regulator-min-microvolt = <3000000>;
+		regulator-max-microvolt = <3000000>;
+
+		gpio = <&msmgpio 115 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&lcd_3v_ldo_en_default>;
+	};
 };
 
 &blsp1_uart2 {
+	status = "okay";
+};
+
+
+&dsi0 {
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&mdss_default>;
+	pinctrl-1 = <&mdss_sleep>;
+
+	panel@0 {
+		compatible = "samsung,s6e8aa5x01-ams520kt01";
+		reg = <0>;
+
+		vdd-supply = <&reg_vdd_lcd_1p8>;
+		power-supply = <&reg_vdd_lcd_3p0>;
+
+		reset-gpios = <&msmgpio 25 GPIO_ACTIVE_LOW>;
+
+		port {
+			panel_in: endpoint {
+				remote-endpoint = <&dsi0_out>;
+			};
+		};
+	};
+};
+
+&dsi0_out {
+	data-lanes = <0 1 2 3>;
+	remote-endpoint = <&panel_in>;
+};
+
+&mdss {
 	status = "okay";
 };
 
@@ -327,6 +386,39 @@
 
 		drive-strength = <2>;
 		bias-disable;
+	};
+
+	lcd_ldo_en_default: lcd-ldo-en-default {
+		pins = "gpio69";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	lcd_3v_ldo_en_default: lcd-3v-ldo-en-default {
+		pins = "gpio115";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	mdss {
+		mdss_default: mdss-default {
+			pins = "gpio25";
+			function = "gpio";
+
+			drive-strength = <8>;
+			bias-disable;
+		};
+		mdss_sleep: mdss-sleep {
+			pins = "gpio25";
+			function = "gpio";
+
+			drive-strength = <2>;
+			bias-pull-down;
+		};
 	};
 
 	muic_i2c_default: muic-i2c-default {
