arm64: dts: qcom: msm8916-samsung-j5x: Add display panel (v2)
v2: change power-supply to vdd3p0-supply

--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
@@ -177,7 +177,7 @@
 		reg = <0>;
 
 		vdd-supply = <&reg_vdd_lcd_1p8>;
-		power-supply = <&reg_vdd_lcd_3p0>;
+		vdd3p0-supply = <&reg_vdd_lcd_3p0>;
 
 		reset-gpios = <&msmgpio 25 GPIO_ACTIVE_LOW>;
 
