--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5.dts
@@ -158,6 +158,7 @@
 					sm5703_ldo1: ldo1 {
 						regulator-min-microvolt = <2800000>;
 						regulator-max-microvolt = <2800000>;
+						regulator-always-on;
 					};
 
 					sm5703_ldo2: ldo2 {
@@ -183,6 +184,12 @@
 					sm5703_vbus: vbus {
 						regulator-min-microvolt = <4800000>;
 						regulator-max-microvolt = <4800000>;
+					};
+	
+					sm5703_buck: buck {
+						regulator-min-microvolt = <1500000>;
+						regulator-max-microvolt = <1500000>;
+						regulator-always-on;
 					};
 				};
 			};
@@ -324,7 +331,7 @@
 
     camera-sensor-back@11 {
 		reg = <0x11>;
-        // compatible = "mipi-ccs-1.0", "mipi-ccs";
+        compatible = "mipi-ccs-1.0", "mipi-ccs";
 		vio-supply = <&pm8916_l16>;
         vana-supply = <&sm5703_ldo1>;
 		vcore-supply = <&camera_core>;
@@ -344,7 +351,7 @@
    };
     camera-sensor-front@10 {
 		reg = <0x10>;
-        // compatible = "mipi-ccs-1.0", "mipi-ccs";
+        compatible = "mipi-ccs-1.0", "mipi-ccs";
 		vio-supply = <&pm8916_l16>;
         vana-supply = <&sm5703_ldo1>;
 		vcore-supply = <&camera_core>;
@@ -549,8 +556,9 @@
 	};
 
 	l10 {
-		regulator-min-microvolt = <2700000>;
+		regulator-min-microvolt = <2800000>;
 		regulator-max-microvolt = <2800000>;
+		regulator-always-on; // autofocus
 	};
 
 	l11 {
@@ -583,6 +591,7 @@
 	l16 {
 		regulator-min-microvolt = <1800000>;
 		regulator-max-microvolt = <3300000>;
+		regulator-always-on;
 	};
 
 	l17 {
@@ -708,5 +717,47 @@
 
 		drive-strength = <2>;
 		bias-disable;
+	};
+
+	camera_regulator_fixed: camera-regulator-fixed {
+		pins = "gpio33";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	camera_front_default_a: camera-front-default-a {
+		rst {
+			pins = "gpio28";
+			function = "gpio";
+
+			drive-strength = <16>;
+			bias-disable;
+		};
+		mclk1 {
+			pins = "gpio27";
+			function = "cam_mclk1";
+
+			drive-strength = <16>;
+			bias-disable;
+		};
+	};
+
+	camera_back_default_a: camera-back-default-a {
+		rst {
+			pins = "gpio35";
+			function = "gpio";
+
+			drive-strength = <16>;
+			bias-disable;
+		};
+		mclk0 {
+			pins = "gpio26";
+			function = "cam_mclk0";
+
+			drive-strength = <16>;
+			bias-disable;
+		};
 	};
 };
