fixup! arm64: dts: qcom: msm8916-samsung-j5x: Add pvdd to NFC
Signed-off-by: Lin, Meng-Bo <linmengbo0689@protonmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
@@ -140,8 +140,6 @@
 		regulator-min-microvolt = <1800000>;
 		regulator-max-microvolt = <1800000>;
 
-		regulator-always-on;
-
 		gpio = <&msmgpio 89 GPIO_ACTIVE_HIGH>;
 		enable-active-high;
 
@@ -165,6 +163,8 @@
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&nfc_default>;
+
+		pvdd-supply = <&reg_nfc>;
 	};
 };
 
