dt-bindings: nfc: nxp-nci: document pvdd-supply
Some PN547 nfc controllers are powered by extra regulator pvdd-supply.

Document support for a "pvdd-supply" that is enabled by the nxp-nci-i2c
driver so that the regulator gets enabled when needed.

Signed-off-by: Lin, Meng-Bo <linmengbo0689@protonmail.com>

--- a/Documentation/devicetree/bindings/net/nfc/nxp,nci.yaml
+++ b/Documentation/devicetree/bindings/net/nfc/nxp,nci.yaml
@@ -24,6 +24,9 @@ properties:
   firmware-gpios:
     description: Output GPIO pin used to enter firmware download mode
 
+  vddio-supply:
+    description: Optional regulator used for some PN547 controller
+
   interrupts:
     maxItems: 1
 
