arm64: dts: qcom: msm8916-samsung-j5x: Add sm5703 battery

--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
@@ -78,6 +78,26 @@
 		};
 	};
 
+	i2c-fg {
+		compatible = "i2c-gpio";
+		sda-gpios = <&msmgpio 16 (GPIO_ACTIVE_HIGH|GPIO_OPEN_DRAIN)>;
+		scl-gpios = <&msmgpio 17 (GPIO_ACTIVE_HIGH|GPIO_OPEN_DRAIN)>;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&fg_i2c_default>;
+
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		fuelgauge@71 {
+			compatible = "siliconmitus,sm5703-fg";
+			reg = <0x71>;
+
+			interrupt-parent = <&msmgpio>;
+			interrupts = <21 IRQ_TYPE_EDGE_FALLING>;
+		};
+	};
+
 	i2c-muic {
 		compatible = "i2c-gpio";
 		sda-gpios = <&msmgpio 105 (GPIO_ACTIVE_HIGH|GPIO_OPEN_DRAIN)>;
@@ -358,6 +378,22 @@
 &msmgpio {
 	accel_int_default: accel-int-default {
 		pins = "gpio49";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	fg_alert_default: fg-alert-default {
+		pins = "gpio21";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	fg_i2c_default: fg-i2c-default {
+		pins = "gpio16", "gpio17";
 		function = "gpio";
 
 		drive-strength = <2>;
