--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
@@ -8,6 +8,7 @@
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/interrupt-controller/irq.h>
+#include <dt-bindings/leds/common.h>
 
 / {
 	model = "Samsung Galaxy J5 (2016)";
@@ -216,6 +217,80 @@
 	};
 };
 
+&blsp_i2c6 {
+	status = "okay";
+
+    mfd@49 {
+		compatible = "siliconmitus,sm5703-mfd";
+		reg = <0x49>;
+
+		reset-gpio = <&msmgpio 24 GPIO_ACTIVE_HIGH>;
+		pinctrl-0 = <&mrstb_default>;
+
+		regulator {
+			compatible = "siliconmitus,sm5703-regulator";
+
+			regulators {
+				sm5703_ldo1: ldo1 {
+					regulator-min-microvolt = <2800000>;
+					regulator-max-microvolt = <2800000>;
+				};
+
+				sm5703_ldo2: ldo2 {
+					regulator-min-microvolt = <1500000>;
+					regulator-max-microvolt = <3300000>;
+				};
+
+				sm5703_ldo3: ldo3 {
+					regulator-min-microvolt = <3300000>;
+					regulator-max-microvolt = <3300000>;
+				};
+
+				sm5703_usbldo1: usbldo1 {
+					regulator-min-microvolt = <4800000>;
+					regulator-max-microvolt = <4800000>;
+				};
+
+				sm5703_usbldo2: usbldo2 {
+					regulator-min-microvolt = <4800000>;
+					regulator-max-microvolt = <4800000>;
+				};
+
+				sm5703_vbus: vbus {
+					regulator-min-microvolt = <4800000>;
+					regulator-max-microvolt = <4800000>;
+				};
+
+				sm5703_buck: buck {
+					regulator-min-microvolt = <1500000>;
+					regulator-max-microvolt = <1500000>;
+					regulator-always-on;
+				};
+			};
+		};
+
+		flash {
+			compatible = "siliconmitus,sm5703-flash";
+
+			flash-gpio = <&msmgpio 34 GPIO_ACTIVE_HIGH>;
+			torch-gpio = <&msmgpio 36 GPIO_ACTIVE_HIGH>;
+
+			back-led {
+				function = LED_FUNCTION_FLASH;
+				color = <LED_COLOR_ID_WHITE>;
+				led-max-microamp = <170000>;
+				flash-max-microamp = <1200000>;
+			};
+		};
+
+		charger {
+			compatible = "siliconmitus,sm5703-charger";
+			siliconmitus,enable-autoset;
+			siliconmitus,enable-autostop;
+		};
+	};
+};
+
 &blsp1_uart2 {
 	status = "okay";
 };
@@ -289,6 +364,7 @@
 &usb {
 	status = "okay";
 	extcon = <&muic>, <&muic>;
+	vbus-supply = <&sm5703_vbus>;
 };
 
 &usb_hs_phy {
@@ -488,6 +564,14 @@
 			drive-strength = <2>;
 			bias-pull-down;
 		};
+	};
+
+	mrstb_default: mrstb-default {
+		pins = "gpio24";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
 	};
 
 	muic_i2c_default: muic-i2c-default {
