--- a/arch/arm64/configs/msm8916_defconfig
+++ b/arch/arm64/configs/msm8916_defconfig
@@ -384,3 +384,4 @@ CONFIG_DEBUG_KERNEL=y
 CONFIG_REGULATOR_SM5703=y
 CONFIG_BATTERY_SM5703=y
 CONFIG_TOUCHSCREEN_IMAGIS=y
+CONFIG_INPUT_REGULATOR_HAPTIC=m
