--- a/arch/arm64/configs/msm8916_defconfig
+++ b/arch/arm64/configs/msm8916_defconfig
@@ -385,3 +385,4 @@ CONFIG_REGULATOR_SM5703=y
 CONFIG_BATTERY_SM5703=y
 CONFIG_TOUCHSCREEN_IMAGIS=y
 CONFIG_INPUT_REGULATOR_HAPTIC=m
+CONFIG_LEDS_KTD2692=m
