--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5.dts
@@ -124,6 +124,10 @@
 	vci-supply = <&pm8916_l17>;
 };
 
+&touchscreen {
+	vdd-supply = <&sm5703_ldo3>;
+};
+
 &usb_hs_phy {
 	qcom,init-seq = /bits/ 8 <0x1 0x19 0x2 0x0b>;
 };
