arm64: dts: qcom: msm8916-samsung-j5x: Add display panel

--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j5x.dts
@@ -8,6 +8,33 @@
 	model = "Samsung Galaxy J5 (2016)";
 	compatible = "samsung,j5x", "qcom,msm8916";
 	chassis-type = "handset";
+
+	reg_vdd_lcd_1p8: regulator-vdd-lcd-1p8 {
+		compatible = "regulator-fixed";
+		regulator-name = "vdd_lcd_1p8";
+		regulator-min-microvolt = <1800000>;
+		regulator-max-microvolt = <1800000>;
+		vin-supply = <&pm8916_s4>;
+
+		gpio = <&msmgpio 69 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&lcd_ldo_en_default>;
+	};
+
+	reg_vdd_lcd_3p0: regulator-vdd-lcd-3p0 {
+		compatible = "regulator-fixed";
+		regulator-name = "vdd_lcd_3p0";
+		regulator-min-microvolt = <3000000>;
+		regulator-max-microvolt = <3000000>;
+
+		gpio = <&msmgpio 115 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&lcd_3v_ldo_en_default>;
+	};
 };
 
 &accelerometer {
@@ -21,6 +48,12 @@
 		       "0", "0", "-1";
 };
 
+&panel {
+	compatible = "samsung,s6e8aa5x01-ams520kt01";
+	vdd-supply = <&reg_vdd_lcd_1p8>;
+	power-supply = <&reg_vdd_lcd_3p0>;
+};
+
 &muic {
 	interrupts = <121 IRQ_TYPE_EDGE_FALLING>;
 };
@@ -30,6 +63,26 @@
 		regulator-min-microvolt = <2850000>;
 		regulator-max-microvolt = <3100000>;
 	};
+};
+
+
+&msmgpio {
+	lcd_ldo_en_default: lcd-ldo-en-default {
+		pins = "gpio69";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	lcd_3v_ldo_en_default: lcd-3v-ldo-en-default {
+		pins = "gpio115";
+		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
 };
 
 &accel_int_default {
